# LoRaMac-node

./: .gitmodules  README.md  translate_board_mcu.json
cmake/: stm32f4.cmake
src/: CMakeLists.txt
src/apps/led-blink/: CMakeLists.txt  main.c
src/apps/simple-rx/: CMakeLists.txt  main.c
src/apps/simple-tx/: CMakeLists.txt  main.c
src/boards/NUCLEO-F4xx/: CMakeLists.txt  board-config.h  board.c  delay-board.c  gpio-board.c  lpm-board.c  rtc-board.c  spi-board.c  sysIrqHandlers.c  uart-board.c
src/boards/NUCLEO-F4xx/cmsis/: stm32f4xx_hal_conf.h
src/boards/NUCLEO-G071RB/: CMakeLists.txt  gpio-board.c  lpm-board.c  spi-board.c  uart-board.c
src/boards/NUCLEO-G071RB/cmsis/arm-gcc/: startup_stm32g071rbtx.s  stm32g071xx_flash.ld  text
src/boards/NUCLEO-G07x/: CMakeLists.txt  board-config-nucleo64.h  board-config.h  board.c  delay-board.c  gpio-board.c  rtc-board.c  sysIrqHandlers.c
src/boards/NUCLEO-G07x/cmsis/: stm32g0xx_hal_conf.h
src/boards/NUCLEO-L031K6/: CMakeLists.txt  board-config.h  board.c  delay-board.c  gpio-board.c  lpm-board.c  rtc-board.c  spi-board.c  uart-board.c
src/boards/NUCLEO-L031K6/cmsis/arm-gcc/: stm32l031k6_flash.ld
src/boards/NucleoL073/: CMakeLists.txt  spi-board.c
src/boards/NucleoL152/: CMakeLists.txt  spi-board.c  uart-board.c
src/boards/NucleoL476/: CMakeLists.txt  board-config.h  spi-board.c
src/peripherals/: CMakeLists.txt
src/system/: gpio.h  spi.h
